docs: fix broken links

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -31,7 +31,6 @@
 \maketitle
 
 \begin{abstract}
-    % TODO
     La Fuerza Aeroespacial Colombiana (FAC), en colaboración con la Universidad de los Andes, desarrolló un sistema automatizado para detectar minería ilegal en la Amazonía mediante el análisis de imágenes térmicas FLIR capturadas por sensores aerotransportados. El sistema se centra en la detección de carreteras no pavimentadas y cuerpos de agua como indicadores indirectos de actividad minera.
     
     Se propuso un esquema de preprocesamiento multicanal que mejora la calidad visual de las imágenes térmicas al combinar representaciones sintéticas optimizadas para texturas, estructuras y segmentación espacial. Posteriormente, se evaluaron modelos de aprendizaje profundo, destacándose YOLOv11l con un mAP@50 de 65.2\% y YOLOv11s con un mAP@50–95 de 32.8\%, superando incluso a modelos más robustos. En contraste, RetinaNet obtuvo resultados limitados (mAP@50–95 de 12.2\%) debido a su sensibilidad al desbalance de clases y a las distorsiones térmicas.
@@ -40,7 +39,7 @@
 \end{abstract}
 
 \begin{IEEEkeywords}
-Palabras clave; separadas; por punto y coma. %TODO
+Minería ilegal; detección automatizada; imágenes térmicas FLIR; aprendizaje profundo; preprocesamiento multicanal; monitoreo ambiental; Amazonía colombiana
 \end{IEEEkeywords}
 
 \input{sections/introduccion/introduccion}
